Ajout du formulaire de périodes d'indisponibilités

--- a/templates/common/navAdmin.html.twig
+++ b/templates/common/navAdmin.html.twig
@@ -15,7 +15,7 @@
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="hide-on-med-and-down">
             <li><a href="{{ path('dashboard') }}"><i class="icon-dashboard fa fa-tachometer" aria-hidden="true"></i> Dashboard</a></li>
-            <li><a href="{{ path('dashboard') }}"><i class="icon-dashboard fa fa-calendar" aria-hidden="true"></i> Cours</a></li>
+            <li><a href="{{ path('courses') }}"><i class="icon-dashboard fa fa-calendar" aria-hidden="true"></i> Cours</a></li>
             <li><a href="{{ path('usefull-contacts') }}"><i class="icon-dashboard fa fa-address-book-o" aria-hidden="true"></i> Contacts</a></li>
             <li class="right"><a class="dropdown-button" data-activates="dropdown-param"><i class="fa fa-user-circle-o left icon-dashboard" aria-hidden="true"></i> {{ app.user.completeName }} <i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
