--- a/templates/dashboard/user/courses.html.twig
+++ b/templates/dashboard/user/courses.html.twig
@@ -3,6 +3,8 @@
 {% block stylesheets %}
 {% endblock %}
 
+{% block title %}Fief Malzais : Cours{% endblock %}
+
 {% block body %}
     {{ include('common/navUser.html.twig') }}
 
