--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
         <!-- Custom -->
-        <link rel="stylesheet" href="{{ asset('build/css/main.css') }}">
+        <link rel="stylesheet" href="{{ absolute_url(asset('build/css/main.css')) }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
         {% block stylesheets %}
@@ -31,7 +31,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
         <!-- Custom -->
-        <script type="text/javascript" src="{{ asset('build/js/main.js') }}"></script>
+        <script type="text/javascript" src="{{ absolute_url(asset('build/js/main.js')) }}"></script>
+
         {% block javascripts %}
         {% endblock %}
     </body>
