--- a/templates/dashboard/admin/dashboard.html.twig
+++ b/templates/dashboard/admin/dashboard.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('build/css/table.css') }}">
-    <link rel="stylesheet" href="{{ asset('build/css/dashboard.css') }}">
+    <link rel="stylesheet" href="{{ asset('build/css/common/table.css') }}">
+    <link rel="stylesheet" href="{{ asset('build/css/common/dashboard.css') }}">
 {% endblock %}
 
 {% block body %}
