--- a/templates/dashboard/admin/courses.html.twig
+++ b/templates/dashboard/admin/courses.html.twig
@@ -1,7 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-
+    <style>
+        .divider {
+            margin-bottom: 15px;
+        }
+    </style>
 {% endblock %}
 
 {% block body %}
@@ -11,7 +15,9 @@
         <div class="col xl8 l8 m10 s12 offset-xl2 offset-l2 offset-m1">
             <div class="card">
                 <div class="card-content">
+
                     <h3 class="center-align">Cours</h3>
+                    <div class="divider"></div>
                     <p>Cette fonctionnalité n'est pas encore disponible, veuillez ressayez plus tard.</p>
                 </div>
             </div>
