--- a/templates/dashboard/user/contacts.html.twig
+++ b/templates/dashboard/user/contacts.html.twig
@@ -33,4 +33,6 @@
 {% endblock %}
 
 {% block javascripts %}
+    <script src="{{ asset('build/js/dashboard/contacts.js') }}"></script>
+
 {% endblock %}
