--- a/templates/dashboard/user/ajax/forms/addCourse.html.twig
+++ b/templates/dashboard/user/ajax/forms/addCourse.html.twig
@@ -3,25 +3,23 @@
 
     <div class="input-field col xl12 l12 m12 s12">
         <div class="row">
-            <div class="input-field col xl4 l4 m12 s12">
-                <label for="add_course_courseHours">Horaire du cours</label>
-                {{form_widget(addCourseForm.courseHours,{'attr': {'placeholder': "test" }}) }}
+            <div class="input-field col xl6 l6 m12 s12">
+                {{form_widget(addCourseForm.courseHours) }}
+                {{form_label(addCourseForm.courseHours) }}
+
             </div>
-            <div class="input-field col xl4 l4 m12 s12">
+            <div class="input-field col xl6 l6 m12 s12">
                 {{ form_widget(addCourseForm.courseType) }}
                 {{ form_label(addCourseForm.courseType) }}
             </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="input-field col xl12 l10 m12 s12">
-            <p id="summary-course"></p>
-            {{ form_widget(addCourseForm.submit) }}
+    <div class="input-field col xl12 l12 m12 s12">
+        {{ form_widget(addCourseForm.submit) }}
 
-            <div class="progress progress-add-notification">
-                <div class="indeterminate"></div>
-            </div>
+        <div class="progress progress-add-course">
+            <div class="indeterminate"></div>
         </div>
     </div>
 
