Mise en place de l'ajout d'un cours + validator de cours existant

--- a/templates/dashboard/user/ajax/forms/addCourse.html.twig
+++ b/templates/dashboard/user/ajax/forms/addCourse.html.twig
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="add-course-submit" data-url="{{ path('add-course') }}">
     {{ form_start(addCourseForm) }}
 
     <div class="input-field col xl12 l12 m12 s12">
