--- a/templates/dashboard/user/ajax/forms/addCourse.html.twig
+++ b/templates/dashboard/user/ajax/forms/addCourse.html.twig
@@ -1,7 +1,7 @@
 <div class="row" id="add-course-submit" data-url="{{ path('add-course') }}">
     {{ form_start(addCourseForm) }}
 
-    <div class="input-field col xl12 l12 m12 s12">
+    <div class="input-field col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1">
         <div class="row">
             <div class="input-field col xl6 l6 m12 s12">
                 {{form_widget(addCourseForm.courseHours) }}
@@ -15,7 +15,7 @@
         </div>
     </div>
 
-    <div class="input-field col xl12 l12 m12 s12">
+    <div class="input-field col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1">
         {{ form_widget(addCourseForm.submit) }}
 
         <div class="progress progress-add-course">
